# argon

./: .dvcignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_PROJECT_STATUS.md  DEMO.md  INTEGRATION_SUMMARY.md  MIGRATION_COMPLETE.md  NEON_COMPATIBILITY_DEMO.md  NEXT_STEPS.md  README.md  argon_databricks_demo.ipynb  docker-compose.yml  dump.archive  go.mod  go.sum  pyproject.toml  requirements.txt  server.json  setup.py  start-dashboard.sh  test_complete_system.sh  test_core_functionality.py  test_integrations.py  test_wal.go  validate_integrations.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  (+1 more)
api/: api_test.go  go.mod  go.sum  main.go  router.go
benchmarks/: system_bench_test.go.bak
cli/: .gitkeep  go.mod  go.sum  main.go  main.py
compat/: README.md  run.sh
core/: .gitkeep  __init__.py  branch.py  branch_manager.py  client.py  docker_utils.py  metadata.py  project.py  s3_utils.py
dashboard/: .gitkeep  README.md  app.py  package.json  tailwind.config.js
data/: .gitkeep  base_dump.archive
docs/: 5_WEEK_WAL_IMPLEMENTATION_PLAN.md  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CLI.md  CLI_COMPATIBILITY_ANALYSIS.md  COMPRESSION_RESULTS.md  CURRENT_STATUS_SUMMARY.md  DEPLOYMENT_GUIDE.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  JUPYTER_INTEGRATION.md  MIGRATION_GUIDE.md  ML_INTEGRATIONS.md  OPENSOURCE_OPERATION_FLOWS.md  OPENSOURCE_REWRITE_PLAN.md  OPERATIONS.md  PERFORMANCE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PYTHON_SDK.md  QUICK_START.md  README.md  USE_CASES.md  WAL_ARCHITECTURE_DIAGRAM.md  WAL_BRANCH_LSN_DESIGN.md  WAL_COMPRESSION.md  WAL_CORE_DESIGN.md  WAL_DESIGN_SUMMARY.md  WAL_GARBAGE_COLLECTION.md  WAL_IMPLEMENTATION_OVERVIEW.md  WAL_SIMPLE_DELETE.md  WAL_TEST_SUMMARY.md  WAL_WEEK3_DAY4_SUMMARY.md  WAL_WEEK3_DAY5_SUMMARY.md  WAL_WEEK3_PLAN.md  WAL_WEEK3_PROGRESS.md
engine/: branch_test.go
examples/: README.md  cli_test_demo.go  jupyter_notebook_example.ipynb  ml_integration_example.py  python_sdk_demo.py  run-all-demos.sh  wal_cli_demo.sh
homebrew/: argon.rb
integrations/: __init__.py  dvc.py  jupyter.py  jupyter_magic.py  mlflow.py  wandb.py
npm/: README.md  install.js  package.json
publish-guides/: README.md  homebrew.md  npm.md  pypi.md
scripts/: build.sh  build_release.sh  clean_commit.sh  create_release.sh  init-replica-set.js  install.sh  publish-npm.sh  publish-pypi.sh  sync-ui.sh
sdk/: restore.go
storage/: storage_test.go
tests/: test_jupyter_integration.py  test_ml_integrations.py
worker/: worker_test.go
(+199 files in other folders)
