[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argonctl"
version = "0.1.0"
authors = [
  { name="Jake Wang", email="jake@argonlabs.tech" },
]
description = "Argon CLI for managing data science projects"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3",
    "python-dotenv",
    "docker",
    "typer[all]",
    "fastapi",
    "uvicorn",
    "jinja2",
    "rich"
]

[project.urls]
"Homepage" = "https://github.com/argon-lab/argon"
"Bug Tracker" = "https://github.com/argon-lab/argon/issues"

[project.scripts]
argonctl = "cli.main:run_app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*"]
namespaces = false
