[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argon-mongodb"
version = "1.0.1"
authors = [
  { name="Argon Lab", email="support@argonlabs.tech" },
]
description = "Python SDK for Argon - MongoDB branching with time travel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Version Control",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mongodb", "database", "branching", "time-travel", "ml", "ai"]
dependencies = [
    "pymongo>=4.0",
]

[project.optional-dependencies]
ml = [
    "jupyter>=1.0.0",
    "mlflow>=2.0.0",
    "dvc>=3.0.0",
    "wandb>=0.15.0",
]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/argon-lab/argon"
Documentation = "https://github.com/argon-lab/argon/tree/main/docs"
Repository = "https://github.com/argon-lab/argon.git"
Issues = "https://github.com/argon-lab/argon/issues"

[tool.setuptools]
packages = ["argon", "argon.integrations"]
package-dir = {"argon" = "core", "argon.integrations" = "integrations"}

[tool.setuptools.package-data]
argon = ["py.typed"]